--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "string-generator",
-  "version": "1.1.0",
+  "name": "string-gen",
+  "version": "1.1.1",
   "description": "String Generator ================",
   "main": "index.js",
   "scripts": {
